--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Ignore Distributed Directory
+dist/index.js
+
+# Ignore environment variables
+*.env
