--- a/package.json
+++ b/package.json
@@ -32,12 +32,19 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-csjs-postcss": "^0.3.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "csswring": "^5.1.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "postcss-cssnext": "^2.9.0",
+    "react-router": "^3.0.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.3"
   }
